tests/baselines/reference/internalAliasFunctionInsideLocalModuleWithoutExportAccessError.errors.txt
tests/cases/compiler/internalAliasFunctionInsideLocalModuleWithoutExportAccessError.ts(12,11): error TS2339: Property 'b' does not exist on type 'typeof c'.


==== tests/cases/compiler/internalAliasFunctionInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export module a {
        export function foo(x: number) {
            return x;
        }
    }
    
    export module c {
        import b = a.foo;
        var bVal = b(10);
        export var bVal2 = b;
    }
    var d = c.b(11);
              ~
!!! error TS2339: Property 'b' does not exist on type 'typeof c'.